--- a/vercel.json
+++ b/vercel.json
@@ -19,26 +19,14 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/",
-      "dest": "/ar.html"
+      "source": "/",
+      "destination": "/ar.html"
     },
     {
-      "src": "/ar",
-      "dest": "/ar.html"
-    },
-    {
-      "src": "/(.*).glb",
-      "dest": "/public/assets/$1.glb"
-    },
-    {
-      "src": "/(.*).png",
-      "dest": "/public/assets/$1.png"
-    },
-    {
-      "src": "/(.*).svg",
-      "dest": "/public/assets/$1.svg"
+      "source": "/ar",
+      "destination": "/ar.html"
     }
   ],
   "headers": [
