--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-node_modules/
+# macOS
 .DS_Store
-.vercel
+.AppleDouble
+.LSOverride
+
+# Node & tooling
+node_modules/
+.vercel/
+.env
+.env.*
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Builds / caches
+.dist/
+dist/
+build/
+.cache/
+.next/
+.out/
+coverage/
+
+# Editor
+.vscode/
+.idea/
+*.swp
