--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,54 @@
+{
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/ar", "destination": "/index.html" },
+    { "source": "/ar.html", "destination": "/index.html" }
+  ],
+  "redirects": [
+    { "source": "/ar.html", "destination": "/", "permanent": true }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ]
+}
+
 # macOS
 .DS_Store
 .AppleDouble
 .LSOverride
 
-# Node & tooling
+# Node / package managers
 node_modules/
-.vercel/
-.env
-.env.*
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Builds / caches
-.dist/
-dist/
+# Vercel local state
+.vercel/
+
+# Env files
+.env
+.env.*
+
+# Build outputs / caches
 build/
-.cache/
-.next/
+dist/
 .out/
+.next/
+.cache/
 coverage/
 
-# Editor
+# Editors
 .vscode/
 .idea/
 *.swp
