Add advanced MindAR integration with Three.js and comprehensive AR mode selection
- Create mindar-advanced.html with Three.js + MindAR implementation
- Add professional UI/UX with smooth tracking algorithms
- Copy working MindAR vendor files from successful project
- Add brand.css for consistent styling across all modes
- Create landing.html with AR mode selection interface
- Update navigation between all three AR modes:
  * Web AR (Model Viewer + USDZ)
  * A-Frame AR (MindAR + A-Frame)
  * Advanced AR (Three.js + MindAR)
- Add vercel.json routes for clean URLs
- Implement advanced features from working MindAR project:
  * Smooth position/rotation interpolation
  * Professional error handling
  * Status indicators and instructions
  * Optimized model loading and animation
- Ready for production testing with all AR approaches

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
     "version": 2,
     "name": "lagree-ar",
     "rewrites": [
-      { "source": "/", "destination": "/index.html" }
+      { "source": "/", "destination": "/landing.html" },
+      { "source": "/web-ar", "destination": "/index.html" },
+      { "source": "/marker-ar", "destination": "/mindar.html" },
+      { "source": "/advanced-ar", "destination": "/mindar-advanced.html" }
     ],
     "headers": [
       {
