--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "An AR mural application built with A-Frame and MindAR for marker-based augmented reality.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo 'Static site: no build needed'",
+    "vercel-build": "npm run build",
+    "dev": "vercel dev --listen 3000",
+    "start": "npx serve -l 3000 public",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [],
   "author": "",
