--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@tensorflow/tfjs": "^3.21.0",
-    "@tensorflow/tfjs-backend-wasm": "^3.21.0",
-    "aframe": "^0.1.3",
-    "mind-ar": "^1.2.5"
+    "aframe": "^0.1.3"
   },
   "repository": {
     "type": "git",
