Add plane detection AR experience and clean up code
- Added new plane-ar.html with simplified AR experience focused on wall detection
- Cleaned up index.html by removing debug controls and complex performance monitoring
- Improved mobile responsiveness with centered AR button and better spacing
- Updated model files to use LCSE-AR-Back-Wall-Clean-Parented versions
- Added mobile-specific CSS improvements for better UX
- Updated vercel.json routing to include plane AR option
- Simplified JavaScript code by removing unnecessary debugging features

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lagree-ar",
   "version": "1.0.0",
-  "description": "An AR mural application built with A-Frame and MindAR for marker-based augmented reality.",
+  "description": "An AR mural application with plane detection and marker-based augmented reality using Model Viewer and A-Frame.",
   "main": "index.js",
   "scripts": {
     "build": "echo 'Static site: no build needed'",
